--- a/강주성.html
+++ b/강주성.html
@@ -70,7 +70,9 @@ DESIGN, artemest.com.
     Visit ELLE
   </a>
 </div>
-        <footer>© 2025 High Fashion. All rights reserved.</footer>
+        <footer>© 2025 High Fashion. All rights reserved.
+            JI     MG      JS      HS       DA
+        </footer>
         <div class="footer-extra">
   <div class="shapes">
     <div class="square"></div>
